# system-monitor-devcontainer

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.devcontainer/: devcontainer.json
scripts/: build_image.sh  entrypoint.sh  run.sh
src/: ncurses_display.cpp
